Correctly compile on J11 toolchain with J8 compatibility